update:트리형태 포인터로 수정
