# backend-pages/docs/swagger.json
@@ -390,7 +390,7 @@
                 }
             },
             "post": {
-                "description": "Create a new page for a specific site and group",
+                "description": "페이지 생성",
                 "consumes": [
                     "application/json"
                 ],
@@ -400,7 +400,7 @@
                 "tags": [
                     "pages"
                 ],
-                "summary": "Create new page",
+                "summary": "페이지 생성",
                 "parameters": [
                     {
                         "type": "string",
@@ -736,12 +736,6 @@
         "models.Page": {
             "type": "object",
             "properties": {
-                "children": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Page"
-                    }
-                },
                 "content": {
                     "type": "string"
                 },
@@ -754,13 +748,19 @@
                 "group_id": {
                     "type": "integer"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "is_published": {
                     "type": "boolean"
                 },
+                "menu": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Page"
+                    }
+                },
                 "menu_order": {
+                    "type": "integer"
+                },
+                "page_id": {
                     "type": "integer"
                 },
                 "parent_id": {
